[package]
name = "procon-bundler"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
regex = "1.3.9"
dbg = { git = "https://github.com/ngtkana/ac-adapter-rs.git", package = "dbg" }
itertools = "0.9.0"
glob = "0.3.0"
