[package]
name = "procon-bundler"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
lazy_static = "1.4.0"
regex = "1.5.4"
toml = "0.5.8"

[dev-dependencies]
difference = "2.0.0"
test-case = "1.1.0"
