[package]
name = "procon-bundler"
version = "0.2.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
glob = "0.3.0"
regex = "1.10"
toml = "0.8"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
difference = "2.0.0"
test-case = "3.3"
